fix: remove extra padding and default mode of DescriptionListModule
Module had 16px extra padding on left cells.
Extra padding was removed.
Styling and story was fixed to maintain alignment of text.

Default mode was removed (module is already in the default state).
Users can optionally specify whether the module should be "stacked" or "toggle"

Default story was changed to use responsive stacking.

--- a/packages/security/src/components/LayoutModules/DescriptionListModule/_index.scss
+++ b/packages/security/src/components/LayoutModules/DescriptionListModule/_index.scss
@@ -20,6 +20,10 @@
   // TODO: `3.x` - Remove bottom margin from the `TypeLayout` component to allow it to be handled by the layout module.
   > #{get-component-namespace($component-name: $type-layout__name)} {
     margin-bottom: 0;
+
+    #{get-component-namespace($component-name: $type-layout__name)}__cell:first-of-type {
+      padding-left: 0;
+    }
   }
 
   &--dense {
@@ -29,13 +33,10 @@
   &--stacked {
     #{get-component-namespace($component-name: $type-layout__name)}__cell {
       display: block;
-
-      &:first-of-type {
-        padding: 0 0 0 $carbon--spacing-05;
-      }
+      padding: 0;
 
       &:not(:first-of-type) {
-        padding: 0 0 $carbon--spacing-05 $carbon--spacing-05;
+        padding-bottom: $carbon--spacing-05;
       }
     }
   }
@@ -44,13 +45,10 @@
     @media (max-width: 320px) {
       #{get-component-namespace($component-name: $type-layout__name)}__cell {
         display: block;
-
-        &:first-of-type {
-          padding: 0 0 0 $carbon--spacing-05;
-        }
+        padding: 0;
 
         &:not(:first-of-type) {
-          padding: 0 0 $carbon--spacing-05 $carbon--spacing-05;
+          padding-bottom: $carbon--spacing-05;
         }
       }
     }
